align-items: start, justify-content: space-evenly to ensure data in three separate columns are evenly separated both between text and link columns and within the text and link columns

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,4 +30,6 @@ li {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
+  align-items: start;
+  justify-content: space-evenly;
 }
